--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <div class="thank-you">
     <h1>¡Gracias por reservar con VitalExtension!</h1>
     <p>Hemos recibido correctamente tu petición. Muy pronto nos pondremos en contacto contigo para confirmar los detalles.</p>
-    <p>Para premiar tu confianza, te regalamos un ebook con nuestra guía express de longevidad:</p>
-    <a href="https://github.com/nrventurini/ebook_longevidad/raw/main/guia-longevidad.pdf" class="download-btn" download>Descargar Guía de Longevidad</a>
+    <p>Para premiar tu confianza, te obsequiamos con nuestro ebook más leído: "7 claves científicas para hackear tu juventud"</p>
+    <a href="https://github.com/nrventurini/ebook_longevidad/raw/main/guia-longevidad.pdf" class="download-btn" download>Descargar Ebook</a>
     <p style="margin-top:30px;">Además, recibirás tu bono de descuento en el correo electrónico proporcionado. <br>Si no lo ves, revisa también tu carpeta de SPAM.</p>
   </div>
 </body>
