--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>¡Gracias por tu reserva!</title>
+  <meta name="robots" content="noindex"> 
+
   <style>
     body {
       font-family: Arial, sans-serif;
